--- a/OneDrive/Desktop/Spring boot/Spring_Boot_Relationship-1/src/main/resources/application.properties
+++ b/OneDrive/Desktop/Spring boot/Spring_Boot_Relationship-1/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=Sh1!ubham
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Swagger
+spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
